--- a/documentation/arc-documentation/src/01_introduction_and_goals.adoc
+++ b/documentation/arc-documentation/src/01_introduction_and_goals.adoc
@@ -1,30 +1,23 @@
 ifndef::imagesdir[:imagesdir: ../images]
+ifndef::relfileprefix[:relfileprefix: ../../]
 
 [[section-introduction-and-goals]]
 == Introduction and Goals
 
-Introduction into the projects goals and basic requirements are described in the projects xref:../../README.adoc[README]
-file.
-
-
-
 === Requirements Overview
 
-
-
-
+Introduction into the projects goals and basic requirements are described in the projects xref:{relfileprefix}README.adoc[README]
+file.
 
 === Quality Goals
 
+[options="header", cols="1,3"]
+|===
+|Quality goal   | Motivation and explanation
 
-
-
+|===
 
 === Stakeholders
-
-
-
-
 
 [options="header",cols="1,2,2"]
 |===
