--- a/documentation/arc-documentation/src/config.adoc
+++ b/documentation/arc-documentation/src/config.adoc
@@ -3,9 +3,10 @@
 :toc-title: table of contents
 
 // enable table-of-contents
-:toc:
+:toc: left
+:toclevels: 4
 
 // where are images located?
 :imagesdir: ./images
 :arc42help:
-:relfileprefix: ../
+:relfileprefix: ./
